# skala_workspace

./: .gitignore  README.md
MLOps/backend/: config.py  pyproject.toml
MLOps/backend/artifacts/: De_chamber_temperature_prediction_vol1.csv
MLOps/backend/artifacts/config/: De_chamber_temperature_config.json  De_gas_flow_rate_config.json  De_rf_power_config.json  De_rf_power_config_vol2.json  Et_chamber_temperature_config.json  Et_gas_flow_rate_config.json  Et_rf_power_config.json  Li_chamber_temperature_config.json  Li_gas_flow_rate_config.json  Li_rf_power_config.json
MLOps/backend/artifacts/predictions/: De_chamber_temperature_prediction_vol1.csv  De_gas_flow_rate_prediction_vol1.csv  De_rf_power_prediction_vol1.csv  Li_chamber_temperature_prediction.csv  Li_gas_flow_rate_prediction.csv  Li_rf_power_prediction.csv  rmse_comparison.csv
MLOps/backend/data/: De_chamber_temperature.csv  De_gas_flow_rate.csv  De_rf_power.csv  Li_chamber_temperature.csv  Li_gas_flow_rate.csv  Li_rf_power.csv
MLOps/backend/server/model/: NeuralNetwork_LSTM.ipynb
MLOps/backend/server_model/: backend_inference.py  config.py  inference.py  interpolated_temperature_1000.csv  main.py  model.py  prediction_results.csv  retrain.py  retrain_for_second.py  save_matched.py  semiconductor_agent.py  temparature_model.py  weight_used_model.py
MLOps/backend/server_model/data/: De_chamber_temperature_drift_prediction.csv  De_chamber_temperature_drift_prediction_updated.csv  De_chamber_temperature_matched.csv  De_chamber_temperature_matched2.csv  De_chamber_temperature_updated.csv  (+16 more)
RAG/: db.py  (+22 more)
(+313 files in other folders)
