[project]
name = "model-serving"
version = "0.1.0"
description = ""
authors = [
    {name = "Sung Ryel Lim",email = "sungryel.lim@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "keras (>=3.8.0,<4.0.0)",
    "tensorflow (>=2.18.0,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pydot (>=3.0.4,<4.0.0)",
    "graphviz (>=0.20.3,<0.21.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=1.26.0,<2.1.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "model_serving", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
